battery bot added

--- a/games.html
+++ b/games.html
@@ -50,7 +50,7 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Projects</h1>
+								<h1> Game Projects</h1>
 							</header>
 							<div class="content">
 								<p>Below are my projects on which i have worked on OR<br />
@@ -68,19 +68,19 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="images/crypt.png" class="image">
-										<img src="images/crypt.png" alt="" data-position="center center" />
+									<a href="images/battery.jpg" class="image">
+										<img src="images/battery.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3 id="CryptSteg">CryptSteg</h3>
+												<h3 id="CryptSteg">BatteryBot</h3>
 											</header>
-											<p>A kind of CTF-type mainly focused on Cryptography and Steganography. <br />
-											User will move from beginner level to advanced level . User is provided with a reading material / tutorial which he can read / watch to understand the basic concepts needed to solve a level. Once user solves the level he can move on to the next stage and so on ...
+											<p>BatteryBot is a simple time-attack game. <br />
+											BatteryBot features a robot that needs to collect batteries in a limited time it have. His battery keeps on draining and must reach a certain level of power to complete the game.
 											</p>
 											<ul class="actions">
-												<li><a href="https://github.com/hackertron/CryptSteg" class="button" target="_blank">Learn more</a></li>
+												<li><a href="https://github.com/hackertron/BatteryBot" class="button" target="_blank">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
