--- a/games.html
+++ b/games.html
@@ -86,20 +86,20 @@
 									</div>
 								</section>
 								<section>
-									<a href="images/ambot.jpg" class="image">
-										<img src="images/ambot.jpg" alt="" data-position="top center" />
+									<a href="images/Demon.png" class="image">
+										<img src="images/Demon.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3 id="ambot">Ambot</h3>
+												<h3 id="ambot">DemonBoy</h3>
 											</header>
-											<p>Ambot is a simple telegram bot which was created to answer FAQ of Amity University for ex : what is dress code of AIIT department etc . <br />
+											<p>DemonBoy is a 2D side-scroller game . <br />
 
-											I am still working on this bot it will be updated soon . the bot is made of GWB(GeeksWebBot) framework !!
+											You have been cursed by Demonic powers. Unleash your demon or supress it !!
 											</p>
 											<ul class="actions">
-												<li><a href="https://github.com/hackertron/amunibot" class="button" target="_blank">Learn more</a></li>
+												<li><a href="https://github.com/hackertron/DemonBoy" class="button" target="_blank">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
