--- a/games.html
+++ b/games.html
@@ -74,7 +74,7 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3 id="ambot">DemonBoy</h3>
+												<h3 id="DemonBoy">DemonBoy</h3>
 											</header>
 											<p>DemonBoy is a 2D side-scroller game . <br />
 
@@ -94,7 +94,7 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3 id="CryptSteg">BatteryBot</h3>
+												<h3 id="BatteryBot">BatteryBot</h3>
 											</header>
 											<p>BatteryBot is a simple time-attack game. <br />
 											BatteryBot features a robot that needs to collect batteries in a limited time it have. His battery keeps on draining and must reach a certain level of power to complete the game.
@@ -106,17 +106,19 @@
 									</div>
 								</section>
 								<section>
-									<a href="images/owasp.png" class="image">
-										<img src="images/owasp.png" alt="" data-position="25% 25%" />
+									<a href="images/cheat.png" class="image">
+										<img src="images/cheat.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3 id="OWASP_DEMO">OWASP_DEMO</h3>
+												<h3 id="CheatToWin">CheatToWin</h3>
 											</header>
-											<p>Just a bunch of vulnerable pages to demonstrate OWASP TOP 10.</p>
+											<p>A game only for hackers !!.<br>
+												Find your way arount the game logic , hack your way to complete the levels and learn Memory hacking in process.
+											</p>
 											<ul class="actions">
-												<li><a href="https://github.com/hackertron/OWASP_DEMO" class="button">Learn more</a></li>
+												<li><a href="https://github.com/hackertron/CheatToWin" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
