--- a/games.html
+++ b/games.html
@@ -68,8 +68,8 @@
 						<!-- Two -->
 							
 								<section>
-									<a href="images/Demon.png" class="image">
-										<img src="images/Demon.png" alt="" data-position="top center" />
+									<a href="images/demon.png" class="image">
+										<img src="images/demon.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -191,7 +191,7 @@
 								<li><a href="https://in.linkedin.com/in/jayaditya-gupta-a56454129" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Jayssj11</li><li>2016</li>
+								<li>&copy; Jayssj11</li><li>2018</li>
 							</ul>
 						</div>
 					</footer>
