--- a/home.html
+++ b/home.html
@@ -34,6 +34,7 @@
 						<ul class="links">
 							<li><a href="home.html">Home</a></li>
 							<li><a href="work.html">Projects</a></li>
+							<li><a href="games.html">Game Projects</a></li>
 							<li><a href="resume.html">Resume</a></li>
 						</ul>
 						<ul class="actions vertical">
@@ -242,7 +243,7 @@
 								<li><a href="https://in.linkedin.com/in/jayaditya-gupta-a56454129" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Jayssj11</li><li>2016</li>
+								<li>&copy; Jayssj11</li><li>2018</li>
 							</ul>
 						</div>
 					</footer>
