--- a/games.html
+++ b/games.html
@@ -66,7 +66,7 @@
 							
 
 						<!-- Two -->
-							
+								<section id="two" class="spotlights">
 								<section>
 									<a href="images/demon.png" class="image">
 										<img src="images/demon.png" alt="" data-position="top center" />
@@ -86,7 +86,6 @@
 										</div>
 									</div>
 								</section>
-								<section id="two" class="spotlights">
 								<section>
 									<a href="images/battery.jpg" class="image">
 										<img src="images/battery.jpg" alt="" data-position="center center" />
@@ -106,8 +105,8 @@
 									</div>
 								</section>
 								<section>
-									<a href="images/cheat.png" class="image">
-										<img src="images/cheat.png" alt="" data-position="25% 25%" />
+									<a href="images/cheat.jpg" class="image">
+										<img src="images/cheat.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
