--- a/games.html
+++ b/games.html
@@ -140,6 +140,24 @@
 										</div>
 									</div>
 								</section>
+								<section>
+									<a href="images/quiz.png" class="image">
+										<img src="images/quiz.png" alt="" data-position="25% 25%" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3 id="QuizGame">QuizGame</h3>
+											</header>
+											<p>A classic QuizGame !!.<br>
+												A simple quiz game made with help of unity engine and Material UI.
+											</p>
+											<ul class="actions">
+												<li><a href="https://github.com/hackertron/QuizGame" class="button">Learn more</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
 							</section>
 
 						
