--- a/games.html
+++ b/games.html
@@ -158,6 +158,24 @@
 										</div>
 									</div>
 								</section>
+								<section>
+									<a href="images/flappy.png" class="image">
+										<img src="images/flappy.png" alt="" data-position="25% 25%" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3 id="QuizGame">Flappy</h3>
+											</header>
+											<p>Flappy Bird Clone in Qt and V-play Engine !!.<br>
+												Flappy is a flappy bird clone game made with Qt and v-play engine. Game is cross-platform.
+											</p>
+											<ul class="actions">
+												<li><a href="https://github.com/hackertron/flappy" class="button">Learn more</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
 							</section>
 
 						
