--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="robots" content="{{project.meta.robotsMeta}}">
       
-       <title>{{project.seoTitle}}</title>
+       <title>hackertron's Github</title>
       <!-- SEO Description -->
       <meta name="description" content="{{project.seoDescription}}">
       <!-- Performance optimization: Preload critical resources -->
